fixes up carousel alignment, fixed pointer events bug, start iobserver

--- a/src/styles/components/_fixedLogo.scss
+++ b/src/styles/components/_fixedLogo.scss
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   bottom: calc(var(--project-title-height) + var(--unit-45));
-  left: 50%;
+  left: calc(50% - 2px);
   transform: translateX(-50%);
   display: flex;
   justify-content: flex-end;
