--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -1,31 +1,36 @@
+$slickArrowSize: 28px;
+
+.slick-container {
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  top: 0;
+  bottom: 0;
+  transform: translateX(-50%);
+  z-index: 1;
+  pointer-events: none;
+}
+
 .slick-arrow {
+  box-sizing: content-box;
+  padding: var(--unit-4);
   position: absolute;
   top: 50%;
   z-index: 1;
-  width: 28px;
-  height: 28px;
+  width: $slickArrowSize;
+  height: $slickArrowSize;
+  margin-top: -$slickArrowSize / 2;
+  cursor: pointer;
+  pointer-events: auto;
+
   > svg {
     width: 100%;
     height: 100%;
   }
 }
 
-.slick-arrow-container {
-  position: absolute;
-  width: 100%;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-}
-
-.slick-next {
-  right: var(--unit-10);
-}
-
-.slick-previous {
-  outline: solid 1px yellow;
-}
+.slick-next     { right: calc((var(--unit-4) - 28px) * -1); }
+.slick-previous { left:  calc((var(--unit-4) - 28px) * -1); }
 
 .slick-list, .slick-track {
   flex: 1;
@@ -66,6 +71,7 @@
   position: absolute;
   bottom: var(--unit-10);
   left: var(--unit-10);
+  pointer-events: auto;
 
   a:hover {
     text-decoration: underline;
