--- a/src/styles/config/_helpers.scss
+++ b/src/styles/config/_helpers.scss
@@ -1,5 +1,7 @@
 .hide { display: none !important; }
 
+.block {display: block;}
+
 .t-center { text-align: center; }
 
 .flex {
