--- a/src/styles/config/_vars.scss
+++ b/src/styles/config/_vars.scss
@@ -32,6 +32,10 @@
   color: var(--white);
 }
 
+.c-black {
+  color: var(--black);
+}
+
 .c-gray {
   color: var(--gray);
 }
